@@ -28,5 +28,6 @@ Martin Gagern
 Dan Deward
 Burkhard Kaas
 Henning Makholm
-Charles A Edwards
+Charles A. Edwards
 Pablo Rosciani
+Pavel Kankovsky
