@@ -80,6 +80,7 @@ version_sources= \
 	collect.h collect.c \
 	configfile.h configfile.c \
 	datastore.h datastore.c db_handle_props.h \
+	db_lock.h db_lock.c \
 	debug.h debug.c \
 	error.h error.c \
 	fgetsl.h fgetsl.c \
