@@ -5,6 +5,18 @@
 NOTE: More information on important changes for bogofilter updaters
 is in the RELEASE.NOTES files.  Read them!!
 
+	2004-09-01
+	* Hook up crash detection code. Bogofilter is now able to detect
+	  when recovery is necessary and should detect stalled data bases
+	  within 30 seconds.
+	  NOTE: this means if one process crashes all other processes
+	  accessing the same data base will abort with an error code.
+
+	  Stalled data bases happen when one process or the system crashes and
+	  doesn't have a chance to clear its locks.
+
+	  This code uses ideas from Matthias Andree and Pavel Kankovsky.
+
 	2004-08-23
 	* Add -f and -F options to bogoutil (mnemonic: fix) to run data base
 	  recovery.
